RESOLVED FIXED175169
viewport-fit changes during animated resize can cause layout size to get stuck
https://bugs.webkit.org/show_bug.cgi?id=175169
Summary viewport-fit changes during animated resize can cause layout size to get stuck
Tim Horton
Reported 2017-08-03 18:14:34 PDT
viewport-fit changes during animated resize can cause layout size to get stuck
Attachments
Patch (11.36 KB, patch)
2017-08-03 18:15 PDT, Tim Horton
no flags
Patch (13.11 KB, patch)
2017-08-03 18:23 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2017-08-03 18:15:09 PDT
Tim Horton
Comment 2 2017-08-03 18:15:25 PDT
Going to try to write an API test.
Tim Horton
Comment 3 2017-08-03 18:23:28 PDT
Build Bot
Comment 4 2017-08-03 18:25:31 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Tim Horton
Comment 5 2017-08-04 12:51:17 PDT
Landed because of the broken tests that it fixes, but still working on API test.
Tim Horton
Comment 6 2017-08-04 12:53:14 PDT
Tim Horton
Comment 7 2017-08-04 14:42:01 PDT
Radar WebKit Bug Importer
Comment 8 2017-08-04 14:42:36 PDT
Tim Horton
Comment 9 2017-08-04 14:43:44 PDT
(In reply to Radar WebKit Bug Importer from comment #8) > <rdar://problem/33732604> No, bad WKBI, it's 33684697
Note You need to log in before you can comment on or make changes to this bug.